--- a/src/main/resources/assets/nyfsquiver/lang/en_us.json
+++ b/src/main/resources/assets/nyfsquiver/lang/en_us.json
@@ -14,5 +14,6 @@
 	"nyfsquiver.quivers.info.two": "Can be opened with '%s'",
 	"nyfsquiver.quivers.info.inventory_index": "Inventory id: %d",
 	"curios.identifier.quiver": "Quiver",
-	"curios.identifier.arrows": "Arrows"
+	"curios.identifier.arrows": "Arrows",
+	"itemgroup.nyfsquiver": "Nyf's Quivers"
 }
