--- a/src/main/resources/assets/nyfsquiver/lang/en_us.json
+++ b/src/main/resources/assets/nyfsquiver/lang/en_us.json
@@ -15,5 +15,6 @@
 	"nyfsquiver.quivers.info.two": "Can be opened with '%s'",
 	"nyfsquiver.quivers.info.inventory_index": "Inventory id: %d",
 	"curios.identifier.quiver": "Quiver",
-	"enchantment.nyfsquiver.meld_enchant": "Melding"
+	"enchantment.nyfsquiver.meld_enchant": "Melding",
+	"itemGroup.nyfsquiver": "Nyf's Quivers"
 }
