--- a/src/main/resources/assets/nyfsquiver/lang/en_us.json
+++ b/src/main/resources/assets/nyfsquiver/lang/en_us.json
@@ -17,5 +17,9 @@
 	"curios.identifier.quiver": "Quiver",
 	"enchantment.nyfsquiver.meld_enchant": "Melding",
 	"enchantment.nyfsquiver.meld_enchant.desc": "Items are also affected by Player Invisibility",
+	"enchantment.nyfsquiver.cycling_enchant": "Cycling",
+	"enchantment.nyfsquiver.cycling_enchant.desc": "Quivers Cycle to the next Slot if Current Slot is empty",
+	"enchantment.nyfsquiver.quinfinity_enchant": "Quinfinity",
+	"enchantment.nyfsquiver.quinfinity_enchant.desc": "Quivers use Durability to make Arrows not Deplete",
 	"itemGroup.nyfsquiver": "Nyf's Quivers"
 }
